--- a/src/index.css
+++ b/src/index.css
@@ -27,3 +27,7 @@ h1, h2, h3, h4, h5{
 .bg-main{
   background-color: #212428
 }
+.active {
+  color: #ff014f !important;
+  background-color: #212428 !important;
+}
